{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 309,
  "lineage": "e26dc8f9-7740-b09e-8742-704c46e55ee4",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:646977526611:loadbalancer/app/vpc-test-alb/9bb8911c9a303837",
            "arn_suffix": "app/vpc-test-alb/9bb8911c9a303837",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "vpc-test-alb-1469404254.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:646977526611:loadbalancer/app/vpc-test-alb/9bb8911c9a303837",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vpc-test-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-01e1aa2a73ecc9b0f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07d33449a3f2f90ef"
              },
              {
                "subnet_id": "subnet-0e05b31532f03cc0a"
              }
            ],
            "subnets": [
              "subnet-07d33449a3f2f90ef",
              "subnet-0e05b31532f03cc0a"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-alb",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "alb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-alb",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "alb"
            },
            "vpc_id": "vpc-0dbc76f9a3f015ea4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:646977526611:listener/app/vpc-test-alb/9bb8911c9a303837/b73dfbd7eae787d1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:646977526611:targetgroup/vpc-test-tg-80/0ac84133b5704d6a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:646977526611:listener/app/vpc-test-alb/9bb8911c9a303837/b73dfbd7eae787d1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:646977526611:loadbalancer/app/vpc-test-alb/9bb8911c9a303837",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.app",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:646977526611:targetgroup/vpc-test-tg-80/0ac84133b5704d6a",
            "arn_suffix": "targetgroup/vpc-test-tg-80/0ac84133b5704d6a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:646977526611:targetgroup/vpc-test-tg-80/0ac84133b5704d6a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:646977526611:loadbalancer/app/vpc-test-alb/9bb8911c9a303837"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vpc-test-tg-80",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-tg",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "alb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-tg",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "alb"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:security-group/sg-01e1aa2a73ecc9b0f",
            "description": "ALB security group (public entry)",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach app on app_port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0040e6e69ef73ccef"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-01e1aa2a73ecc9b0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-test-sg-alb",
            "name_prefix": "",
            "owner_id": "646977526611",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-sg-alb",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "alb"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-sg-alb",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:security-group/sg-0040e6e69ef73ccef",
            "description": "App tier security group (private)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow app egress (via NAT for internet access)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0040e6e69ef73ccef",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow app traffic from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01e1aa2a73ecc9b0f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc-test-sg-app",
            "name_prefix": "",
            "owner_id": "646977526611",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-sg-app",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-sg-app",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:security-group/sg-027cd20b18df30009",
            "description": "DB tier security group (isolated)",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow DB egress (patching/monitoring as needed)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027cd20b18df30009",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow DB access from app tier only",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0040e6e69ef73ccef"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "vpc-test-sg-db",
            "name_prefix": "",
            "owner_id": "646977526611",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-sg-db",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "db"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-sg-db",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:security-group-rule/sgr-08bb536cd7b2c026b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow ALB to reach app on app_port",
            "from_port": 80,
            "id": "sgr-08bb536cd7b2c026b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0040e6e69ef73ccef",
            "region": "us-east-1",
            "security_group_id": "sg-01e1aa2a73ecc9b0f",
            "security_group_rule_id": "sgr-08bb536cd7b2c026b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.app",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "app_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:security-group-rule/sgr-0bb25683c0b25890d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow app egress (via NAT for internet access)",
            "from_port": null,
            "id": "sgr-0bb25683c0b25890d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0040e6e69ef73ccef",
            "security_group_rule_id": "sgr-0bb25683c0b25890d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.app",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:security-group-rule/sgr-0724690805ee3105b",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow DB egress (patching/monitoring as needed)",
            "from_port": null,
            "id": "sgr-0724690805ee3105b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-027cd20b18df30009",
            "security_group_rule_id": "sgr-0724690805ee3105b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.db",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:security-group-rule/sgr-04d1460588f79df60",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP from internet",
            "from_port": 80,
            "id": "sgr-04d1460588f79df60",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01e1aa2a73ecc9b0f",
            "security_group_rule_id": "sgr-04d1460588f79df60",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:security-group-rule/sgr-06a4f438ad95b2edc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTPS from internet",
            "from_port": 443,
            "id": "sgr-06a4f438ad95b2edc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01e1aa2a73ecc9b0f",
            "security_group_rule_id": "sgr-06a4f438ad95b2edc",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:security-group-rule/sgr-0286d8161662a1078",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow app traffic from ALB",
            "from_port": 80,
            "id": "sgr-0286d8161662a1078",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-01e1aa2a73ecc9b0f",
            "region": "us-east-1",
            "security_group_id": "sg-0040e6e69ef73ccef",
            "security_group_rule_id": "sgr-0286d8161662a1078",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.app",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_from_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:security-group-rule/sgr-0e982732008741a01",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow DB access from app tier only",
            "from_port": 5432,
            "id": "sgr-0e982732008741a01",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0040e6e69ef73ccef",
            "region": "us-east-1",
            "security_group_id": "sg-027cd20b18df30009",
            "security_group_rule_id": "sgr-0e982732008741a01",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.app",
            "module.security.aws_security_group.db",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e67545db57e736d8",
            "arn": "arn:aws:ec2:us-east-1:646977526611:elastic-ip/eipalloc-0e67545db57e736d8",
            "association_id": "eipassoc-0da128ba04ec28e77",
            "domain": "vpc",
            "id": "eipalloc-0e67545db57e736d8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02db8dc5bff5627ef",
            "private_dns": "ip-10-0-0-152.ec2.internal",
            "private_ip": "10.0.0.152",
            "public_dns": "ec2-34-194-212-99.compute-1.amazonaws.com",
            "public_ip": "34.194.212.99",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-eip-nat-0",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-eip-nat-0",
              "Owner": "cherki",
              "Project": "vpc-test"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d94510583387669",
            "arn": "arn:aws:ec2:us-east-1:646977526611:elastic-ip/eipalloc-03d94510583387669",
            "association_id": "eipassoc-03f6a0c18324db497",
            "domain": "vpc",
            "id": "eipalloc-03d94510583387669",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0337fc492b48be726",
            "private_dns": "ip-10-0-1-241.ec2.internal",
            "private_ip": "10.0.1.241",
            "public_dns": "ec2-54-162-1-4.compute-1.amazonaws.com",
            "public_ip": "54.162.1.4",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-eip-nat-1",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-eip-nat-1",
              "Owner": "cherki",
              "Project": "vpc-test"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:internet-gateway/igw-07578ee231201af77",
            "id": "igw-07578ee231201af77",
            "owner_id": "646977526611",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-igw",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-igw",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e67545db57e736d8",
            "association_id": "eipassoc-0da128ba04ec28e77",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b06dd98ec1daaf88",
            "network_interface_id": "eni-02db8dc5bff5627ef",
            "private_ip": "10.0.0.152",
            "public_ip": "34.194.212.99",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07d33449a3f2f90ef",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-nat-0",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-nat-0",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d94510583387669",
            "association_id": "eipassoc-03f6a0c18324db497",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0215e71dbc385a1f8",
            "network_interface_id": "eni-0337fc492b48be726",
            "private_ip": "10.0.1.241",
            "public_ip": "54.162.1.4",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e05b31532f03cc0a",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-nat-1",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-nat-1",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08d486aeba0002ca51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b06dd98ec1daaf88",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-08d486aeba0002ca5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09b6a011d58040df21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0215e71dbc385a1f8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-09b6a011d58040df2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07578ee231201af77",
            "id": "r-rtb-013abef5f417226bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-013abef5f417226bd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "isolated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:route-table/rtb-0da7b3f1402f380ad",
            "id": "rtb-0da7b3f1402f380ad",
            "owner_id": "646977526611",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-rt-isolated-us-east-1a",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-rt-isolated-us-east-1a",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:route-table/rtb-0318217f8c8048ddd",
            "id": "rtb-0318217f8c8048ddd",
            "owner_id": "646977526611",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-rt-isolated-us-east-1b",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-rt-isolated-us-east-1b",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:route-table/rtb-08d486aeba0002ca5",
            "id": "rtb-08d486aeba0002ca5",
            "owner_id": "646977526611",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b06dd98ec1daaf88",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-rt-private-us-east-1a",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-rt-private-us-east-1a",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:route-table/rtb-09b6a011d58040df2",
            "id": "rtb-09b6a011d58040df2",
            "owner_id": "646977526611",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0215e71dbc385a1f8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-rt-private-us-east-1b",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-rt-private-us-east-1b",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:route-table/rtb-013abef5f417226bd",
            "id": "rtb-013abef5f417226bd",
            "owner_id": "646977526611",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07578ee231201af77",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-rt-public",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-rt-public",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "isolated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018efd6159f86d489",
            "region": "us-east-1",
            "route_table_id": "rtb-0da7b3f1402f380ad",
            "subnet_id": "subnet-01c3c026d4a32812f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.isolated",
            "module.vpc.aws_subnet.isolated",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bc7b736e78d2118",
            "region": "us-east-1",
            "route_table_id": "rtb-0318217f8c8048ddd",
            "subnet_id": "subnet-0e9a6f6f06762135f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.isolated",
            "module.vpc.aws_subnet.isolated",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddd01e7e729a5935",
            "region": "us-east-1",
            "route_table_id": "rtb-08d486aeba0002ca5",
            "subnet_id": "subnet-093081c60bb68ec4d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c69b24f2d6eb028d",
            "region": "us-east-1",
            "route_table_id": "rtb-09b6a011d58040df2",
            "subnet_id": "subnet-045f23b27b4183aae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5183451e2a525bc",
            "region": "us-east-1",
            "route_table_id": "rtb-013abef5f417226bd",
            "subnet_id": "subnet-07d33449a3f2f90ef"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0101215ae455ca1ae",
            "region": "us-east-1",
            "route_table_id": "rtb-013abef5f417226bd",
            "subnet_id": "subnet-0e05b31532f03cc0a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:security-group/sg-0da51456834127ece",
            "description": "Security group for VPC interface endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da51456834127ece",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-test-vpce-sg",
            "name_prefix": "",
            "owner_id": "646977526611",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-sg",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-sg",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "isolated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:subnet/subnet-01c3c026d4a32812f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c3c026d4a32812f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "646977526611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-isolated-us-east-1a",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "isolated"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-isolated-us-east-1a",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "isolated"
            },
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:subnet/subnet-0e9a6f6f06762135f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9a6f6f06762135f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "646977526611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-isolated-us-east-1b",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "isolated"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-isolated-us-east-1b",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "isolated"
            },
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:subnet/subnet-093081c60bb68ec4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093081c60bb68ec4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "646977526611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-private-us-east-1a",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-private-us-east-1a",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "private"
            },
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:subnet/subnet-045f23b27b4183aae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045f23b27b4183aae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "646977526611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-private-us-east-1b",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-private-us-east-1b",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "private"
            },
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:subnet/subnet-07d33449a3f2f90ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d33449a3f2f90ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "646977526611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-public-us-east-1a",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-public-us-east-1a",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "public"
            },
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:subnet/subnet-0e05b31532f03cc0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e05b31532f03cc0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "646977526611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-public-us-east-1b",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-public-us-east-1b",
              "Owner": "cherki",
              "Project": "vpc-test",
              "Tier": "public"
            },
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:vpc/vpc-0dbc76f9a3f015ea4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01186d8a38b625eca",
            "default_route_table_id": "rtb-08a4ebcff67ff0a4e",
            "default_security_group_id": "sg-0aba58999fc40b849",
            "dhcp_options_id": "dopt-0dc2a1dadf62566cd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dbc76f9a3f015ea4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a4ebcff67ff0a4e",
            "owner_id": "646977526611",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-vpc",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-vpc",
              "Owner": "cherki",
              "Project": "vpc-test"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:vpc-endpoint/vpce-06f19dcea50464605",
            "dns_entry": [
              {
                "dns_name": "vpce-06f19dcea50464605-3e51o93z.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06f19dcea50464605-3e51o93z-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06f19dcea50464605-3e51o93z-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z015251223JH9TAMJ1GC7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06f19dcea50464605",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05326f9494262d2e3",
              "eni-0ab08641f06fc4dec"
            ],
            "owner_id": "646977526611",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0da51456834127ece"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.178",
                "subnet_id": "subnet-093081c60bb68ec4d"
              },
              {
                "ipv4": "10.0.11.204",
                "subnet_id": "subnet-045f23b27b4183aae"
              }
            ],
            "subnet_ids": [
              "subnet-045f23b27b4183aae",
              "subnet-093081c60bb68ec4d"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-ec2messages",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-ec2messages",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpce",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "ecr.api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:vpc-endpoint/vpce-010e9e8a1ff769396",
            "dns_entry": [
              {
                "dns_name": "vpce-010e9e8a1ff769396-4m54tdw3.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-010e9e8a1ff769396-4m54tdw3-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-010e9e8a1ff769396-4m54tdw3-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05638941OCBTQ8YPLZ4V"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z01523592IUMR65NLP32X"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-010e9e8a1ff769396",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0e9f303efb74f04b1",
              "eni-0eb64a153c5292c34"
            ],
            "owner_id": "646977526611",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0da51456834127ece"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.155",
                "subnet_id": "subnet-093081c60bb68ec4d"
              },
              {
                "ipv4": "10.0.11.181",
                "subnet_id": "subnet-045f23b27b4183aae"
              }
            ],
            "subnet_ids": [
              "subnet-045f23b27b4183aae",
              "subnet-093081c60bb68ec4d"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-ecr-api",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-ecr-api",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpce",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "ecr.dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:vpc-endpoint/vpce-091dfc175da421324",
            "dns_entry": [
              {
                "dns_name": "vpce-091dfc175da421324-m0cg7qqt.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-091dfc175da421324-m0cg7qqt-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-091dfc175da421324-m0cg7qqt-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z056419223UBAE6018PHT"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z056419223UBAE6018PHT"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z01549081V8EZM7CP565C"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z01549081V8EZM7CP565C"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-091dfc175da421324",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0035cd61489b8587e",
              "eni-08efc4feb9c83a5f6"
            ],
            "owner_id": "646977526611",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0da51456834127ece"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.160",
                "subnet_id": "subnet-093081c60bb68ec4d"
              },
              {
                "ipv4": "10.0.11.229",
                "subnet_id": "subnet-045f23b27b4183aae"
              }
            ],
            "subnet_ids": [
              "subnet-045f23b27b4183aae",
              "subnet-093081c60bb68ec4d"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-ecr-dkr",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-ecr-dkr",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpce",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:vpc-endpoint/vpce-03a3edfed78189c06",
            "dns_entry": [
              {
                "dns_name": "vpce-03a3edfed78189c06-unadlpw6.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03a3edfed78189c06-unadlpw6-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03a3edfed78189c06-unadlpw6-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0151860UWA4ZQ7V1QJG"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05636852J1O5M9YKZ2EU"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z01518621VHOJ1W4AJP6"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0153876RA9ALJ8J98O9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03a3edfed78189c06",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0b3d223fdb5262f4d",
              "eni-0c6fef585d35c4054"
            ],
            "owner_id": "646977526611",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0da51456834127ece"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.54",
                "subnet_id": "subnet-093081c60bb68ec4d"
              },
              {
                "ipv4": "10.0.11.144",
                "subnet_id": "subnet-045f23b27b4183aae"
              }
            ],
            "subnet_ids": [
              "subnet-045f23b27b4183aae",
              "subnet-093081c60bb68ec4d"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-logs",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-logs",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpce",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:vpc-endpoint/vpce-0bf3d6d433618a724",
            "dns_entry": [
              {
                "dns_name": "vpce-0bf3d6d433618a724-flw4lngd.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0bf3d6d433618a724-flw4lngd-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0bf3d6d433618a724-flw4lngd-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0431589GTWRAM9DLFIX"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z01485382CO9G28II2FBC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bf3d6d433618a724",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0198781ac1ad3c922",
              "eni-0916d3b394c602906"
            ],
            "owner_id": "646977526611",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0da51456834127ece"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.185",
                "subnet_id": "subnet-093081c60bb68ec4d"
              },
              {
                "ipv4": "10.0.11.239",
                "subnet_id": "subnet-045f23b27b4183aae"
              }
            ],
            "subnet_ids": [
              "subnet-045f23b27b4183aae",
              "subnet-093081c60bb68ec4d"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-ssm",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-ssm",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpce",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:vpc-endpoint/vpce-067938769d8486f9d",
            "dns_entry": [
              {
                "dns_name": "vpce-067938769d8486f9d-4pvmvaex.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-067938769d8486f9d-4pvmvaex-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-067938769d8486f9d-4pvmvaex-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01757691IOZVU093KY93"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z01485322118OLJOTUS3V"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-067938769d8486f9d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-001ee6da4fdfd69a3",
              "eni-04e274f00a713acaf"
            ],
            "owner_id": "646977526611",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0da51456834127ece"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.164",
                "subnet_id": "subnet-093081c60bb68ec4d"
              },
              {
                "ipv4": "10.0.11.162",
                "subnet_id": "subnet-045f23b27b4183aae"
              }
            ],
            "subnet_ids": [
              "subnet-045f23b27b4183aae",
              "subnet-093081c60bb68ec4d"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-ssmmessages",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-ssmmessages",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpce",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:646977526611:vpc-endpoint/vpce-01e08bea18ec2cb73",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01e08bea18ec2cb73",
            "ip_address_type": "ipv4",
            "owner_id": "646977526611",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0318217f8c8048ddd",
              "rtb-08d486aeba0002ca5",
              "rtb-09b6a011d58040df2",
              "rtb-0da7b3f1402f380ad"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-s3",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-test-vpce-s3",
              "Owner": "cherki",
              "Project": "vpc-test"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0dbc76f9a3f015ea4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.isolated",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}